--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,9 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/JimHeo/jimheo.github.io.git
+  branch: gh-pages
 
 emoji:
   enable: true
