--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "hexo-filter-emoji": "^2.2.1",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
-    "hexo-word-counter": "0.0.1"
+    "hexo-word-counter": "0.0.1",
+    "stylint": "^2.0.0"
   }
 }
