--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "4.2.1"
   },
   "dependencies": {
+    "@1v9/hexo-next-nightmode": "git+https://github.com/matheusgeres/hexo-next-nightmode.git",
     "hexo": "^4.2.1",
     "hexo-deployer-git": "^2.1.0",
     "hexo-filter-emoji": "^2.2.1",
