--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -454,14 +454,14 @@ disable_baidu_transformation: false
 
 # If true, site-subtitle will be added to index page.
 # Remember to set up your site-subtitle in Hexo `_config.yml` (e.g. subtitle: Subtitle)
-index_with_subtitle: false
+index_with_subtitle: true
 
 # Automatically add external URL with Base64 encrypt & decrypt.
-exturl: false
+exturl: true
 
 # Google Webmaster tools verification.
 # See: https://www.google.com/webmasters
-google_site_verification:
+google_site_verification: oQ7HTi1xryHDWx06lTeI5yjUSngiM82UnDecuMqCbzQ
 
 # Bing Webmaster tools verification.
 # See: https://www.bing.com/webmaster
