--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@1v9/hexo-next-nightmode": "git+https://github.com/matheusgeres/hexo-next-nightmode.git",
     "hexo": "^4.2.1",
+    "hexo-auto-canonical": "^0.1.1",
+    "hexo-autonofollow": "^1.0.1",
     "hexo-deployer-git": "^2.1.0",
     "hexo-filter-emoji": "^2.2.1",
     "hexo-generator-archive": "^1.0.0",
@@ -21,6 +23,7 @@
     "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-indexed": "^1.2.0",
+    "hexo-generator-robotstxt": "^0.2.0",
     "hexo-generator-seo-friendly-sitemap": "0.0.25",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
