--- a/_config.yml
+++ b/_config.yml
@@ -115,8 +115,8 @@ feed:
 
 sitemap:
   path: sitemap.xml
-  tag: true
-  category: true
+  tag: false
+  category: false
 
 nofollow:
   enable: true
