Enable page-sitemap.xml, category-sitemap.xml

--- a/_config.yml
+++ b/_config.yml
@@ -115,8 +115,8 @@ feed:
 
 sitemap:
   path: sitemap.xml
-  tag: false
-  category: false
+  tag: true
+  category: true
 
 nofollow:
   enable: true
