--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: JimintheBox
 subtitle: 
-description: Jim, Lubycon Dev.
+description: Lubycon Dev.
 keywords:
-author: Jim Heo
+author: Jim / Damian
 language: en
 #language: ko
 timezone: Asia/Seoul
