--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "version": "4.2.1"
   },
   "dependencies": {
-    "@1v9/hexo-next-nightmode": "git+https://github.com/matheusgeres/hexo-next-nightmode.git",
+    "@1v9/hexo-next-nightmode": "github:1v9/hexo-next-nightmode",
     "hexo": "^4.2.1",
     "hexo-auto-canonical": "^0.1.1",
     "hexo-autonofollow": "^1.0.1",
