--- a/themes/next/package.json
+++ b/themes/next/package.json
@@ -33,5 +33,8 @@
   },
   "engines": {
     "node": ">=10.9.0"
+  },
+  "dependencies": {
+    "@1v9/hexo-next-nightmode": "github:1v9/hexo-next-nightmode"
   }
 }
