--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/JimHeo/jimheo.github.io.git
+  repo: git@github.com:JimHeo/jimheo.github.io.git
   branch: master
 
 emoji:
