Update linkedin url

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -174,7 +174,7 @@ site_state: true
 social:
   EMail: mailto:gjwlals111@gmail.com || fa fa-paper-plane
   GitHub: https://github.com/JimHeo || fab fa-github-alt
-  LinkedIn: https://www.linkedin.com/in/jimin-heo-797519144/ || fab fa-linkedin
+  LinkedIn: www.linkedin.com/in/jiminthebox0218 || fab fa-linkedin
   #Weibo: https://weibo.com/yourname || fab fa-weibo
   #Google: https://plus.google.com/yourname || fab fa-google
   #Twitter: https://twitter.com/yourname || fab fa-twitter
