--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: JimintheBox
 subtitle: 
 description: Lubycon Dev.
 keywords:
-author: Jim / Demian
+author: Jim
 language: en
 #language: ko
 timezone: Asia/Seoul
