--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: JimintheBox
 subtitle: 
-description: Lubycon Dev.
+description: Machine Learning Engineer
 keywords:
 author: Jim
 language: en
